src/main/webapp/static/themes/light/modules/_qti21.scss
/* ... */
.o_assessmentitem_scoring_override_window {
	width: 300px;
}


.itemPrompt {
	margin: 1.5em 0;
	font-style: italic;
	color: #666666;
}

.o_qti_item_body {
	margin: 1em 0;
}

.o_sel_assessment_item_hint {
	margin-top: 1em;
}

.o_assessment_test_results .o_sel_assessment_item_hint {
	display:none;
}

/* Choice interaction */
div.choiceInteraction {
	clear: both;
}

tr.choiceinteraction {
	td.control {
		padding: 0.5em;
	}
	
	td.choiceInteraction {
		padding: 0.5em;
	}
}

.choiceInteraction {
	label {
		font-weight: normal;
	}
}

.choiceInteraction input + i  {
	display: none;
}

.choiceInteraction div.o_qti_item_choice_option_flow  {
	display: inline-block;
	padding: .5em;
	border: 1px solid transparent;
	
	label span {
		font-weight: normal;
	
	}
	
	label span>p {
		display: inline-block;
	}
}

/* Choices horizontal right */
.choiceInteraction.choiceright div.o_qti_item_choice_option_flow {
	.radio label {
		padding-left: 0;
	}
	.radio input {
		margin-left: 0;
		position: relative;
	}
}

.choiceInteraction.choiceright table tr td.choiceInteraction {
	background-color: $o-qti-choice-tablelayout-bg;
	border-bottom: 3px solid white;
}

/* Text gap */
/* there is a copy in _qti21content.scss for TinyMCE */
.textEntryInteraction {
	input, span.o_input_value {
		margin: -1px 2px;	
		vertical-align: middle;
		font-size: ($font-size-base * 0.98);
		line-height: 1.5; /* smaller than #itemBody */
		border: 1px solid $o-qti-textEntryInteraction-border-color;
		border-radius: $input-border-radius;
    	@include box-shadow(inset 0 1px 1px rgba(0, 0, 0, .075)); // Redeclare so transitions work
		background: $o-qti-textEntryInteraction-bg;
		padding: 1px 3px;
		color: $o-qti-textEntryInteraction-color;
		max-width: 100%;
		/* format fields with values in it in separate style */
		&:valid,
		&:disabled,
		&.o_input_value_wrapper {
			color: $o-qti-textEntryInteraction-filled-color;
			background: $input-bg-disabled;		
			border: 1px solid $o-qti-textEntryInteraction-filled-border-color;
		}
		
		@include form-control-focus;
	}
	
	&.has-feedback input {
		padding-right: 42.5px;
	}
	&.has-error input {
		border-color: $state-danger-text;
	}
	&.has-success input {
		border-color: $state-success-text;
	}
}

/* Match interaction */
.matchInteraction.choiceright table tr td.o_qti_item_kprim_text {
	background-color: $o-qti-choice-tablelayout-bg;
	border-bottom: 3px solid white;
}

table.table.o_qti_item_kprim>thead>tr>th, table.table.o_qti_item_kprim>tbody>tr>td {
	border:none;
}

td.o_qti_item_kprim_input, th.o_qti_item_kprim_input {
	text-align:center;
}

table.o_qti_item_kprim {
	td.o_qti_item_kprim_input_correct {
		background-color: $o-qti-match-kprim-correct-bg;
	}
	
	td.o_qti_item_kprim_input_wrong {
		background-color: $o-qti-match-kprim-wrong-bg;
	}
	
	td.o_qti_item_kprim_input_correct, td.o_qti_item_kprim_input_wrong,
	th.o_qti_item_kprim_input_correct, th.o_qti_item_kprim_input_wrong {
		width: 11%;
	}
	td.o_qti_item_kprim_text, th.o_qti_item_kprim_text {
		width: 88%;
	}
}	

.matchInteraction {
	input[type='text'] {
		display:inline;
		width:auto;
	}
	
	div.bar_green { background-color: $o-qti-bar-green; }
	div.bar_red { background-color: $o-qti-bar-red; }
	
	.has-success input {
		border-color: $brand-success;
	}
}

/* Match interaction drag & drop */
.o_match_dnd {
	display: grid;
	gap: 10px;
	clear: left;
}

.o_match_dnd_top_bottom {
	grid-template-rows: auto 1fr;
}

.o_match_dnd_left_right {
	grid-template-columns: 1fr 1fr;
}

.o_match_dnd_sources {
	padding: 10px 10px 0 10px;
	min-height: 60px;
	border: 1px solid $o-qti-match-sources-border-color;
	border-radius: $o-qti-match-border-radius;
	background: $o-qti-match-sources-bg;
	
	&.oo-accepted {
		border-color: $o-qti-match-drop-accept-border-color;
	}
}

.o_match_dnd_source {
	padding: 10px;
	margin-bottom: 10px;
	border: 2px $o-qti-match-source-border-style $o-qti-gap-border-color;
	border-radius: $o-qti-match-border-radius;
	background-color: #ffffff;
	background: $o-qti-match-source-bg;
	@include clearfix;
	
	&.oo-selected {
		border: 2px $o-qti-match-source-border-style $o-qti-match-selected-border-color;
		background: $o-qti-match-selected-bg;
	}
	
	&.oo-drag {
		border: 2px $o-qti-match-source-border-style $o-qti-match-drag-border-color !important;
	}
	
	cursor: move; /* fallback if grab cursor is unsupported */
    cursor: grab;
}

.source-bottom .o_match_dnd_source, .source-top .o_match_dnd_source {
	margin: 0 0 10px 0;
}

.o_match_dnd_targets .oo-accepted {
	border: 2px solid $o-qti-match-drop-accept-border-color;
	border-radius: $o-qti-match-border-radius;
}

.o_match_dnd_target {
	padding: 10px 10px 0 10px;
	margin: 0 0 10px 0;
	border: 2px solid $o-qti-match-target-border-color;
	border-radius: $o-qti-match-border-radius;
	background: $o-qti-match-target-bg;
	@include clearfix;

	.o_match_dnd_target_drop_zone {
		margin: 0;
		padding: 5px 0 0 15px;
		min-height: 30px;
		
		.o_match_dnd_source {
			border: 2px $o-qti-match-source-border-style $o-qti-match-choosed-border-color;
		}
	}
}

.target-bottom .o_match_dnd_target, .target-top .o_match_dnd_target {
	margin: 0 0 10px 0;
	
	.o_match_dnd_target_drop_zone {
		padding-left: 0px;
		
		.o_match_dnd_source {
			padding-left: 15px;
		}
	}
}

/* Match true/false */
.table.o_match_true_false_edit {
	th.o_sel_match_target_0, th.o_sel_match_target_1, th.o_sel_match_target_2 {
		width: 12%;
	}
}
/* ... */

